--- a/index.html
+++ b/index.html
@@ -15,16 +15,21 @@
     <header>
       <div class="container">
         <div class="header-left">
-          <a href="#"><i class="fas fa-home"></i>
-          HOME</a>
+
 
 
         </div>
         <div class="header-center">
           <h3 class="heading-top">~台湾大好き大学生が紹介する~</h3>
           <h2 class="heading-2">【必見】これだけは知っておきたい台湾旅</h2>
-          <a class="food"  href="#">好吃　FOOD</a>
-          <a class="sightseeing" href="#"></a>
+        </div>
+
+        <div class="header-bottom">
+
+          <a class="food"  href="#">好吃FOOD</a>
+          <a class="sightseeing" href="#">観光スポット</a>
+          <a class="night_market" href="#">台湾夜市</a>
+          <a class="souvenir" href="#">お土産</a>
 
 
         </div>
@@ -70,28 +75,28 @@
 
         <div class="content food">
           <h3>～ご当地グルメ編～</h3>
-          <img class="content-icon" src="C:\Users\shota\Desktop\html_website\images\top\food_top.jpg" alt="小籠包の画像">
+          <img class="content-icon" src="https://raw.githubusercontent.com/xiaolongbaoking/taiwanwan/master/images/top/food_top.jpg" alt="小籠包の画像">
           <p>台湾に来たら絶対食べたいグルメをご紹介。インスタ映えする可愛いスイーツや、台湾の地元グルメなど台湾の食を楽しむなら必見です！！！</p>
 
         </div>
 
         <div class="content sightseeing">
           <h3>～観光スポット編～</h3>
-          <img class="content-icon" src="C:\Users\shota\Desktop\html_website\images\top\jiufen_top.jpg" alt="九分の画像">
+          <img class="content-icon" src="https://raw.githubusercontent.com/xiaolongbaoking/taiwanwan/master/images/top/jiufen_top.jpg" alt="九分の画像">
           <p>映画の舞台になったあの有名な観光スポットから、穴場スポットまで。初台湾の方や、ツウな方まで楽しめるコンテンツとなっています！！</p>
 
         </div>
 
         <div class="content night_market">
           <h3>～これぞ台湾！夜市編～</h3>
-          <img class="content-icon"  src="C:\Users\shota\Desktop\html_website\images\top\night_market1.jpg" alt="士林夜市の画像">
+          <img class="content-icon"  src="https://raw.githubusercontent.com/xiaolongbaoking/taiwanwan/master/images/top/night_market1.jpg" alt="士林夜市の画像">
           <p>台湾を楽しむなら夜が一番！平日でも毎日がお祭りのように賑やかで、地元の方にも大人気。そんな夜市を全力で楽しむ方法をご紹介します。</p>
 
         </div>
 
         <div class="content souvenir">
           <h3>～お土産編～</h3>
-          <img class="content-icon" src="C:\Users\shota\Desktop\html_website\images\top\souvenir_top.jpg" alt="台湾製の可愛い雑貨">
+          <img class="content-icon" src="https://raw.githubusercontent.com/xiaolongbaoking/taiwanwan/master/images/top/souvenir_top.jpg" alt="台湾製の可愛い雑貨">
           <p>台湾にはかわいいお土産や、美味しいお菓子がたくさん！！その中でも僕が買って喜んでもらえたお土産をご紹介します。</p>
 
         </div>
@@ -116,7 +121,7 @@
           <input class="contact-submit" type=submit value="送信">
         </div>
         <div class="message-right">
-          <img src="C:\Users\shota\Desktop\html_website\images\top\message-right.jpg" alt="マッサージを受ける写真">
+          <img src="https://raw.githubusercontent.com/xiaolongbaoking/taiwanwan/master/images/top/message-right.JPG" alt="マッサージを受ける写真">
 
         </div>
 
