--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>台湾行くなら必見！！南国大学生の台湾旅～</title>
+    <title>台湾行くなら[必見]！！南国大学生の台湾旅～</title>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
@@ -20,19 +20,20 @@
 
         </div>
         <div class="header-center">
-          <h3 class="heading-top">~台湾大好き大学生が紹介する~</h3>
+          <p class="heading-top">~台湾大好き大学生が紹介する~</p>
           <h2 class="heading-2">【必見】これだけは知っておきたい台湾旅</h2>
-        </div>
-
-        <div class="header-bottom">
-
-          <a class="food"  href="#">好吃FOOD</a>
-          <a class="sightseeing" href="#">観光スポット</a>
-          <a class="night_market" href="#">台湾夜市</a>
-          <a class="souvenir" href="#">お土産</a>
 
 
-        </div>
+
+          <a  class="menu home" href="#">
+          <i class="fas fa-home home-logo"></i>HOME</a>
+          <a class="menu food"  href="#">好吃FOOD</a>
+          <a class="menu sightseeing" href="#">観光スポット</a>
+          <a class="menu night_market" href="#">台湾夜市</a>
+          <a class="menu souvenir" href="#">お土産</a>
+  </div>
+
+
 
 
       </div>
@@ -76,7 +77,7 @@
         <div class="content food">
           <h3>～ご当地グルメ編～</h3>
           <img class="content-icon" src="https://raw.githubusercontent.com/xiaolongbaoking/taiwanwan/master/images/top/food_top.jpg" alt="小籠包の画像">
-          <p>台湾に来たら絶対食べたいグルメをご紹介。インスタ映えする可愛いスイーツや、台湾の地元グルメなど台湾の食を楽しむなら必見です！！！</p>
+          <p>台湾に来たら絶対食べたいグルメをご紹介。インスタ映えする可愛いスイーツや、地元グルメなど台湾の食を楽しむなら必見です！！</p>
 
         </div>
 
@@ -90,7 +91,7 @@
         <div class="content night_market">
           <h3>～これぞ台湾！夜市編～</h3>
           <img class="content-icon"  src="https://raw.githubusercontent.com/xiaolongbaoking/taiwanwan/master/images/top/night_market1.jpg" alt="士林夜市の画像">
-          <p>台湾を楽しむなら夜が一番！平日でも毎日がお祭りのように賑やかで、地元の方にも大人気。そんな夜市を全力で楽しむ方法をご紹介します。</p>
+          <p>台湾を楽しむなら夜が一番！平日でも毎日がお祭りで地元の方にも大人気。そんな夜市の楽しみ方をご紹介します！</p>
 
         </div>
 
@@ -106,42 +107,24 @@
       </div>
 
 
+      <footer>
+        <div class="footer-logo">
 
-    <div class="message-wrapper">
-      <div class="container">
-        <div class="section">
 
-        <h2 class="section-title">ご要望</h2>
-
-      </div>
-        <div class="message-left">
-          <p>~僕にオススメしたいもの~ </p>
-          <textarea name="name" rows="8" cols="80"></textarea>
-          <p>※一か月に以内にいきます</p>
-          <input class="contact-submit" type=submit value="送信">
-        </div>
-        <div class="message-right">
-          <img src="https://raw.githubusercontent.com/xiaolongbaoking/taiwanwan/master/images/top/message-right.JPG" alt="マッサージを受ける写真">
-
+        <a  class="footer-home" href="#">
+        <i class="fas fa-home home-logo"></i>HOME</a>
+        <p>🄫　2019　xiaolongbao |台湾大好き大学生 All rights reserved.</p>
         </div>
 
-      </div>
-
-    </div>
 
 
-<footer>
-  <div class="footer-logo">
-
-
-  <a  class="footer-home" href="#">
-  <i class="fas fa-home home-logo"></i>HOME</a>
-  <p>🄫　2019　xiaolongbao |台湾大好き大学生 All rights reserved.</p>
-  </div>
+      </footer>
 
 
 
-</footer>
+
+
+
 
 
 
